# hermes-qq-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: HERMES_PATCH_CHECKLIST.md  architecture.md  hermes-core-changes.md
examples/: config.qq.yaml  docker-compose.napcat.yml
examples/systemd/: hermes-napcat-qq-bridge.service
gateway_platform_shim/: qq.py
hermes_qq/: __init__.py  adapter.py  client.py  types.py
napcat_qq_bridge/: README.md  __init__.py  bridge.py  cli.py  config.example.json  plugin.yaml
scripts/: install-native-qq.sh  install-plugin.sh  patch_hermes_core.py
tests/: test_adapter_media_contract.py  test_client.py  test_napcat_qq_bridge.py  test_static_layout.py
